fix fallomai -> fallom

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fallomai/openui",
+  "name": "@fallom/openui",
   "version": "1.0.0",
   "description": "Visual canvas UI for managing AI coding agents locally",
   "author": "Fallom AI",
